# hostviewer

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  script.ipynb
include/: serialport.h
src/: serialport.cpp
